# stt-realtime-demo

./: .gitignore  hello.py  pyproject.toml
examples/: demo.ipynb  google_maps_api.ipynb  google_stt.py  openai_realtime.ipynb
src/stt_realtime_demo/: __init__.py  main.py  process_function_call.py
src/stt_realtime_demo/openai/: connect.py  process_response.py  send.py  start_stream.py
stt_realtime_demo/: client.py  openai_realtime.py  server.py  updated_server.py
stt_realtime_demo/maps/: distance_matrix.py
stt_realtime_demo/openai/: connect.py  process_response.py  start_stream.py
