[tool.poetry]
name = "stt-realtime-demo"
version = "0.1.0"
description = ""
authors = ["Ben Selleslagh <ben@dataframe.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
sounddevice = "^0.5.0"
soundfile = "^0.12.1"
pyaudio = "^0.2.14"
pydub = "^0.25.1"
elevenlabs = "^1.9.0"
langchain = "^0.3.1"
langchain-ollama = "^0.2.0"
tiktoken = ">=0.3.3,<1.0.0"
python-dotenv = "^1.0.1"
lightning-whisper-mlx = "^0.0.10"
openai = "^1.50.2"
langchain-google-genai = "^2.0.0"
langchain-groq = "^0.2.0"
groq = "^0.11.0"
twilio = "^9.3.2"
websockets = "^13.1"
gtts = "^2.5.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
